--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display:wght@400;500;600;900&display=swap" rel="stylesheet">    <link href="styles/styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display:wght@400;500;600;900&display=swap" rel="stylesheet">    <link href="styles.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/> 
     <title>Beyond 20 Automatic Gif Maker</title>
